Add screen paths
